Fixed topbar menu in dark mode

--- a/src/assets/styles/app/_responsive.scss
+++ b/src/assets/styles/app/_responsive.scss
@@ -39,13 +39,13 @@
         }
 
         .topbar-menu {
-            background-color: #ffffff;
+            background-color: var(--layer-0);
             float: none;
             width: 100%;
             height: 41px;
             margin: -1px 0 0 0;
-            border-bottom: 1px solid #e3e9ea;
-            border-top: 1px solid #e3e9ea;
+            border-bottom: 1px solid var(--layer-2);
+            border-top: 1px solid var(--layer-2);
 
             > li {
                 height: 40px;
